--- a/css/jplayer.billy.pink.css
+++ b/css/jplayer.billy.pink.css
@@ -154,16 +154,16 @@ $jplayer-images-base-url: "../image/" !default;
 }
 
 .jp-play {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 0 no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 0 no-repeat;
 }
 .jp-play:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -41px 0 no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -41px 0 no-repeat;
 }
 .jp-state-playing .jp-play {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -42px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -42px no-repeat;
 }
 .jp-state-playing .jp-play:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -41px -42px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -41px -42px no-repeat;
 }
 
 .jp-stop, .jp-previous, .jp-next {
@@ -173,26 +173,26 @@ $jplayer-images-base-url: "../image/" !default;
 }
 
 .jp-stop {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -83px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -83px no-repeat;
 	margin-left:10px;
 }
 
 .jp-stop:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -29px -83px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -29px -83px no-repeat;
 }
 
 .jp-previous {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -112px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -112px no-repeat;
 }
 .jp-previous:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -29px -112px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -29px -112px no-repeat;
 }
 
 .jp-next {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -141px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -141px no-repeat;
 }
 .jp-next:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -29px -141px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -29px -141px no-repeat;
 }
 
 /* @end */
@@ -223,20 +223,20 @@ $jplayer-images-base-url: "../image/" !default;
 	height:10px;
 }
 .jp-seek-bar {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -202px repeat-x;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -202px repeat-x;
 	width:0px;
 	height:100%;
 	cursor: pointer;
 }
 .jp-play-bar {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -218px repeat-x ;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -218px repeat-x ;
 	width:0px;
 	height:100%;
 }
 
 /* The seeking class is added/removed inside jPlayer */
 .jp-seeking-bg {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.seeking.gif");
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.seeking.gif");
 }
 
 /* @end */
@@ -280,28 +280,28 @@ $jplayer-images-base-url: "../image/" !default;
 }
 
 .jp-mute {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -170px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -170px no-repeat;
 }
 .jp-mute:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -19px -170px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -19px -170px no-repeat;
 }
 .jp-state-muted .jp-mute {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -60px -170px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -60px -170px no-repeat;
 }
 .jp-state-muted .jp-mute:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -79px -170px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -79px -170px no-repeat;
 }
 .jp-volume-max {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -186px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -186px no-repeat;
 }
 .jp-volume-max:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -19px -186px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -19px -186px no-repeat;
 }
 
 .jp-volume-bar {
 	position: absolute;
 	overflow:hidden;
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -250px repeat-x;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -250px repeat-x;
 	top:5px;
 	left:22px;
 	width:46px;
@@ -309,7 +309,7 @@ $jplayer-images-base-url: "../image/" !default;
 	cursor: pointer;
 }
 .jp-volume-bar-value {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -256px repeat-x;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -256px repeat-x;
 	width:0px;
 	height:5px;
 }
@@ -479,13 +479,13 @@ span.jp-artist {
 	left:50%;
 	top:50%;
 
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.video.play.png") 0 0 no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.video.play.png") 0 0 no-repeat;
 	text-indent:-9999px;
 	border:none;
 	cursor:pointer;
 }
 .jp-video-play-icon:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.video.play.png") 0 -100px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.video.play.png") 0 -100px no-repeat;
 }
 
 
@@ -542,53 +542,53 @@ span.jp-artist {
 }
 
 .jp-full-screen {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -310px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -310px no-repeat;
 	margin-left: 20px;
 }
 
 .jp-full-screen:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -30px -310px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -30px -310px no-repeat;
 }
 
 .jp-state-full-screen .jp-full-screen {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -60px -310px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -60px -310px no-repeat;
 }
 
 .jp-state-full-screen .jp-full-screen:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -90px -310px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -90px -310px no-repeat;
 }
 
 .jp-repeat {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -290px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -290px no-repeat;
 }
 
 .jp-repeat:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -30px -290px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -30px -290px no-repeat;
 }
 
 .jp-state-looped .jp-repeat {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -60px -290px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -60px -290px no-repeat;
 }
 
 .jp-state-looped .jp-repeat:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -90px -290px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -90px -290px no-repeat;
 }
 
 .jp-shuffle {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") 0 -270px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") 0 -270px no-repeat;
 	margin-left: 5px;
 }
 
 .jp-shuffle:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -30px -270px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -30px -270px no-repeat;
 }
 
 .jp-state-shuffled .jp-shuffle {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -60px -270px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -60px -270px no-repeat;
 }
 
 .jp-state-shuffled .jp-shuffle:focus {
-	background: url("#{$jplayer-images-base-url}jplayer.blue.monday.jpg") -90px -270px no-repeat;
+	background: url("#{$jplayer-images-base-url}jplayer.billypink.sprites.jpg") -90px -270px no-repeat;
 }
 
 
